# opencv-test

./: .gitignore  CONTOUR_CLEANING.md  README.md  aprt_room_layout.stl  best01_layout.stl  clean_contour.py  convert_my_plan.py  dgem-bff_layout.stl  dnw3d.py  floorplan_editor.py  gem-bgf_layout.stl  genstl.py  line_midpoints.json  note copy.ipynb  note.ipynb  pyproject.toml  render.py  standalone_converter.py  tt.py  wall_with_windows.stl  window_generator.py
images/: 001_dump.txt  2floor.mtl  gem-bff_layout.stl  new_gem-bff_layout.stl  room_layout.stl
process/: boundary_output.json  carpet-boundry.py  floorplan_editor.py  split-page.py
shapy/: .env  FINAL_README.md  INSTALLATION_GUIDE.md  cc_3d.stl  centerlines_data.json  comparison.py  contour_data.json  convert_my_plan.py  data.json  demo_3d.stl  ilding_3d.stl  improved_skeleton_extraction.py  long_3d.stl  mm_3d.stl  mmn_3d.stl  new_professional_converter.py  output_17_walls.stl  output__walls.stl  output_centerline_walls.stl  professional_converter.py  requirements_professional.txt  standalone_converter.py  wall_centerline_method.py
shapy/images/: 3-story-25-48-sq-ft-floor-plan.avif  apart_predictions.json  clean.stl  furni_predictions_processed copy.json  furni_predictions_processed.json  gemb-cutout01.json  gemb-cutout01_corrected.json  gemb-cutout02.json  gemb-cutout02_corrected.json  h1_predictions.json  kaggle.json  nh1_predictions.json  output_17-v2_walls.stl  prediction_results.json  professional_3d.stl
thd/: gem-bff_layout.mtl  generate-with-wnd-wall-final.py  window_generator.py
