[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "numpy-stl>=3.2.0",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "triangle>=20250106",
    "trimesh>=4.11.2",
]
